- fixed bug in reader_zpl.c which appeared using the parameter "reading/zplreader/parameters" 
- fixed bug in trivial heuristic: the locking solution might have falsely initialized some values to zero
- fixed bug in cons_setppc: aggregated variables were not correctly removed in presolving

plugins:
- added constraint handler for second order cone constraints (cons_soc.(c|h))
- added packing/partitioning orbitope constraint handler for symmetry handling (cons_orbitope.h/c)

parameters:
- added parameter misc/usesmalltables which results in using smaller tables for names, cliques and cuts and improves the performace for smaller instances
- added parameter misc/usevartable and misc/useconstable which turns on/off the usage of hashtables mapping from variable/constraint names to the 
  variables/constraints; when turned off, SCIPfindVar() and SCIPfindCons() may not be used; the hashtables can be turned off for submips to improve the performance

SCIP version 1.2.0
===============

interface:
- new parameter "mksetcoefsvalid" in lp.c: SCIPlpCalcMIR(), scip.c: SCIPcalcMIR(), and sepa_cmir.c: tryDelta() to store
  whether "mksetcoefs" computed in SCIPlpCalcMIR() is valid. If the mixed knapsack constraint obtained after aggregating LP rows 
  is empty or contains too many nonzero elements the generation of the c-MIR cut is aborted in SCIPlpCalcMIR() and mksetcoefs is not valid.
- new parameter "set" in SCIPconsSetInitial().
- new methods SCIPchgVarLbLazy() and SCIPchgVarUbLazy() in scip.h; These methods can be used to change the lazy lower or upper bound 
  of a variable; This might has the consequences that the bounds of the corresponding variable is  not in LP. This is the case if the 
  lazy lower or upper bound is greater or less than the local lower or upper bound, respectively 
- new method SCIPvarGetLbLazy() and SCIPvarGetUbLazy() in pub_var.h; These methods return the lazy lower or upper bound, respectively