@@ -19,6 +19,8 @@ fixed bugs:
 - fixed bug in reader_zpl.c which appeared using the parameter "reading/zplreader/parameters" 
 - fixed bug in trivial heuristic: the locking solution might have falsely initialized some values to zero
 - fixed bug in cons_setppc: aggregated variables were not correctly removed in presolving
+- fixed bug in cons_linear.c: binary variables should not be multi-aggregated
+- fixed bug in tree.c: propagate implications on multi-aggregated should not be performed 
 
 plugins:
 - added constraint handler for second order cone constraints (cons_soc.(c|h))
